# port-shadow

./: .port-shadow.example.toml  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: release.yml
src/: cli.rs  config.rs  discovery.rs  events.rs  forward.rs  main.rs  tui.rs
